--- a/bmi.html
+++ b/bmi.html
@@ -8,8 +8,8 @@
         <br>
         <label for="textbox"><h3>Insert Weight in Pounds:</h3></label>
         <input type="text" id="textbox">
-        <br>
-        <button onclick="convert();">Calculate BMI</button>
+        
+        <br> <button onclick="convert();">Calculate BMI</button>
         <br>
         <h3>Your BMI is:</h3> <h3 id="output"></h3>
         
