--- a/bmi.html
+++ b/bmi.html
@@ -3,6 +3,7 @@
         <title>BMI Calculator</title>
     </head>
     <body bgcolor="lightpink">
+        <h1>BMI Calculator</h1>
         <label for="thebox"><h3>Insert Height in Inches:</h3></label>
         <input type="text" id="thebox">
         <br>
