--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <h3>Home Work Sectoin</h3>
           <ul style="list-style-type:none">
             <li><a href=http://whitna02.github.io/schedule.html> My Schedule </a></li>
-            <li><a href=http://whitna02.github.io/degrees.html> Temperature Converter</li>
-            <li><a href=http://whitna02.github.io/addressbook.html> Address Book </li>
+            <li><a href=http://whitna02.github.io/degrees.html> Temperature Converter </a></li>
+            <li><a href=http://whitna02.github.io/addressbook.html> Address Book </a></li>
+            <li><a href=http://whitna02.github.io/bmi.html> BMI Calculator </a></li>
           </ul>
           
       </body>
