--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       background-repeat:no-repeat;
       background-size:cover;
     }
-    h1, h3 {color:red;
+    h1, h3 {color:#BD2031 ;
     }
     </style>
-      <body text="yellow" link="yellow">
+      <body text="#BD2031" link="yellow">
         <h1> Iowa State Cyclones </h1>
         <h3> Men's Basketball </h3>
         <a href= http://espn.go.com/mens-college-basketball/team/_/id/66/iowa-state-cyclones> Cyclone's Team Page </a>
