--- a/bmi.html
+++ b/bmi.html
@@ -2,7 +2,7 @@
     <head>
         <title>BMI Calculator</title>
     </head>
-    <body bgcolor="lightpink">
+    <body background="http://i.ytimg.com/vi/LCs0ZEHyQVg/maxresdefault.jpg">
         <h1>BMI Calculator</h1>
         <label for="thebox"><h3>Insert Height in Inches:</h3></label>
         <input type="text" id="thebox">
