--- a/addressbook.html
+++ b/addressbook.html
@@ -15,9 +15,9 @@
       }
       
       td {
-        border-style:dotted;
-        border-width: 2px;
-        border-color: blue;
+        border-style:solid;
+        border-width: 4px;
+        border-color: black;
       }
     </style>
   </head>
